/* BUILD
protoc --proto_path=src/proto --proto_path=C:\Users\samda\go\src --go_out=plugins=grpc:src/proto .\src\proto\messages\games\chess.proto
*/

syntax = "proto3";

package games;

message ChessRules {
    bool balancedTeams = 1;
}

message ChessState {
    int64 turnEnd = 1;
    repeated ChessRound rounds = 2;

    message ChessRound {
        string board_fen = 1;
        map<string, string> player_to_vote_pgn = 2;
        map<string, int32> vote_pgn_to_count = 3;
    }
}

message ChessVote {
    string move_pgn = 1;
}